k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: careertrack-ingress
  namespace: careertrack

spec:
  ingressClassName: nginx

  rules:
    - host: careertrack.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: careertrack-nginx
                port:
                  number: 80
